--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <form action="/" method="post">
+    <form action="/" method="POST">
       <label for="placeInput">Name of place</label>
       <input id="placeInput" type="text" name="placeName" />
       <button type="submit">Submit</button>
